--- a/app/views/party/identifiers/_fields.html.erb
+++ b/app/views/party/identifiers/_fields.html.erb
@@ -67,8 +67,7 @@
   <!-- Full width: New value -->
   <div class="mt-3 hidden md:col-span-3" data-identifier-row-target="valueInput">
     <label class="label-text mb-1 block">New value</label>
-    <%= f.password_field :value,
-          autocomplete: "off",
+    <%= f.text_field :value,
           class: "input input-bordered w-full",
           placeholder: "Enter new value or leave blank" %>
     <% if f.object.errors[:value].present? %>
